Compiladores/Trabalho 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcao_principal semicolon_opcional
Rule 2     funcao_principal -> INT MAIN LPAREN parametro_main RPAREN bloco
Rule 3     parametro_main -> VOID
Rule 4     parametro_main -> empty
Rule 5     bloco -> LBRACES lista_comandos RBRACES
Rule 6     lista_comandos -> lista_comandos comando
Rule 7     lista_comandos -> empty
Rule 8     comando -> declaracao SEMICOLON
Rule 9     comando -> atribuicao SEMICOLON
Rule 10    comando -> incremento SEMICOLON
Rule 11    comando -> chamada_funcao SEMICOLON
Rule 12    comando -> retorno SEMICOLON
Rule 13    comando -> comando_condicional
Rule 14    comando -> comando_repeticao
Rule 15    comando -> bloco
Rule 16    declaracao -> tipo lista_declaradores
Rule 17    tipo -> INT
Rule 18    tipo -> FLOAT
Rule 19    tipo -> CHAR
Rule 20    tipo -> DOUBLE
Rule 21    lista_declaradores -> lista_declaradores COMMA declarador
Rule 22    lista_declaradores -> declarador
Rule 23    declarador -> ID
Rule 24    declarador -> ID EQUALS expressao
Rule 25    atribuicao -> ID EQUALS expressao
Rule 26    incremento -> ID INCREMENT
Rule 27    incremento -> ID DECREMENT
Rule 28    retorno -> RETURN expressao_opcional
Rule 29    comando_condicional -> IF LPAREN condicao RPAREN comando
Rule 30    comando_condicional -> IF LPAREN condicao RPAREN comando ELSE comando
Rule 31    comando_repeticao -> WHILE LPAREN condicao RPAREN comando
Rule 32    comando_repeticao -> FOR LPAREN inicio_for SEMICOLON condicao_opcional SEMICOLON atualizacao_for RPAREN comando
Rule 33    inicio_for -> declaracao
Rule 34    inicio_for -> atribuicao
Rule 35    inicio_for -> incremento
Rule 36    inicio_for -> empty
Rule 37    atualizacao_for -> atribuicao
Rule 38    atualizacao_for -> incremento
Rule 39    atualizacao_for -> empty
Rule 40    condicao_opcional -> condicao
Rule 41    condicao_opcional -> empty
Rule 42    condicao -> expressao operador_relacional expressao
Rule 43    condicao -> expressao
Rule 44    operador_relacional -> LT
Rule 45    operador_relacional -> LE
Rule 46    operador_relacional -> GT
Rule 47    operador_relacional -> GE
Rule 48    operador_relacional -> NE
Rule 49    operador_relacional -> EQ
Rule 50    expressao_opcional -> expressao
Rule 51    expressao_opcional -> empty
Rule 52    expressao -> expressao PLUS termo
Rule 53    expressao -> expressao MINUS termo
Rule 54    expressao -> termo
Rule 55    termo -> termo TIMES potencia
Rule 56    termo -> termo DIVIDE potencia
Rule 57    termo -> potencia
Rule 58    potencia -> fator POWER potencia
Rule 59    potencia -> fator
Rule 60    fator -> INTEGER
Rule 61    fator -> FLOAT_N
Rule 62    fator -> STRING
Rule 63    fator -> CHARACTER
Rule 64    fator -> ID
Rule 65    fator -> chamada_funcao
Rule 66    fator -> LPAREN expressao RPAREN
Rule 67    fator -> MINUS fator
Rule 68    chamada_funcao -> ID LPAREN argumentos_opcionais RPAREN
Rule 69    argumentos_opcionais -> lista_argumentos
Rule 70    argumentos_opcionais -> empty
Rule 71    lista_argumentos -> lista_argumentos COMMA expressao
Rule 72    lista_argumentos -> expressao
Rule 73    semicolon_opcional -> SEMICOLON
Rule 74    semicolon_opcional -> empty
Rule 75    empty -> <empty>

Terminals, with rules where they appear

CHAR                 : 19
CHARACTER            : 63
COMMA                : 21 71
DECREMENT            : 27
DIVIDE               : 56
DOUBLE               : 20
ELSE                 : 30
EQ                   : 49
EQUALS               : 24 25
FLOAT                : 18
FLOAT_N              : 61
FOR                  : 32
GE                   : 47
GT                   : 46
ID                   : 23 24 25 26 27 64 68
IF                   : 29 30
INCREMENT            : 26
INT                  : 2 17
INTEGER              : 60
LBRACES              : 5
LE                   : 45
LPAREN               : 2 29 30 31 32 66 68
LT                   : 44
MAIN                 : 2
MINUS                : 53 67
NE                   : 48
PLUS                 : 52
POWER                : 58
RBRACES              : 5
RETURN               : 28
RPAREN               : 2 29 30 31 32 66 68
SEMICOLON            : 8 9 10 11 12 32 32 73
STRING               : 62
TIMES                : 55
VOID                 : 3
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

argumentos_opcionais : 68
atribuicao           : 9 34 37
atualizacao_for      : 32
bloco                : 2 15
chamada_funcao       : 11 65
comando              : 6 29 30 30 31 32
comando_condicional  : 13
comando_repeticao    : 14
condicao             : 29 30 31 40
condicao_opcional    : 32
declaracao           : 8 33
declarador           : 21 22
empty                : 4 7 36 39 41 51 70 74
expressao            : 24 25 42 42 43 50 52 53 66 71 72
expressao_opcional   : 28
fator                : 58 59 67
funcao_principal     : 1
incremento           : 10 35 38
inicio_for           : 32
lista_argumentos     : 69 71
lista_comandos       : 5 6
lista_declaradores   : 16 21
operador_relacional  : 42
parametro_main       : 2
potencia             : 55 56 57 58
programa             : 0
retorno              : 12
semicolon_opcional   : 1
termo                : 52 53 54 55 56
tipo                 : 16

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcao_principal semicolon_opcional
    (2) funcao_principal -> . INT MAIN LPAREN parametro_main RPAREN bloco

    INT             shift and go to state 3

    programa                       shift and go to state 1
    funcao_principal               shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcao_principal . semicolon_opcional
    (73) semicolon_opcional -> . SEMICOLON
    (74) semicolon_opcional -> . empty
    (75) empty -> .

    SEMICOLON       shift and go to state 5
    $end            reduce using rule 75 (empty -> .)

    semicolon_opcional             shift and go to state 4
    empty                          shift and go to state 6

state 3

    (2) funcao_principal -> INT . MAIN LPAREN parametro_main RPAREN bloco

    MAIN            shift and go to state 7


state 4

    (1) programa -> funcao_principal semicolon_opcional .

    $end            reduce using rule 1 (programa -> funcao_principal semicolon_opcional .)


state 5

    (73) semicolon_opcional -> SEMICOLON .

    $end            reduce using rule 73 (semicolon_opcional -> SEMICOLON .)


state 6

    (74) semicolon_opcional -> empty .

    $end            reduce using rule 74 (semicolon_opcional -> empty .)


state 7

    (2) funcao_principal -> INT MAIN . LPAREN parametro_main RPAREN bloco

    LPAREN          shift and go to state 8


state 8

    (2) funcao_principal -> INT MAIN LPAREN . parametro_main RPAREN bloco
    (3) parametro_main -> . VOID
    (4) parametro_main -> . empty
    (75) empty -> .

    VOID            shift and go to state 10
    RPAREN          reduce using rule 75 (empty -> .)

    parametro_main                 shift and go to state 9
    empty                          shift and go to state 11

state 9

    (2) funcao_principal -> INT MAIN LPAREN parametro_main . RPAREN bloco

    RPAREN          shift and go to state 12


state 10

    (3) parametro_main -> VOID .

    RPAREN          reduce using rule 3 (parametro_main -> VOID .)


state 11

    (4) parametro_main -> empty .

    RPAREN          reduce using rule 4 (parametro_main -> empty .)


state 12

    (2) funcao_principal -> INT MAIN LPAREN parametro_main RPAREN . bloco
    (5) bloco -> . LBRACES lista_comandos RBRACES

    LBRACES         shift and go to state 14

    bloco                          shift and go to state 13

state 13

    (2) funcao_principal -> INT MAIN LPAREN parametro_main RPAREN bloco .

    SEMICOLON       reduce using rule 2 (funcao_principal -> INT MAIN LPAREN parametro_main RPAREN bloco .)
    $end            reduce using rule 2 (funcao_principal -> INT MAIN LPAREN parametro_main RPAREN bloco .)


state 14

    (5) bloco -> LBRACES . lista_comandos RBRACES
    (6) lista_comandos -> . lista_comandos comando
    (7) lista_comandos -> . empty
    (75) empty -> .

    RBRACES         reduce using rule 75 (empty -> .)
    ID              reduce using rule 75 (empty -> .)
    RETURN          reduce using rule 75 (empty -> .)
    IF              reduce using rule 75 (empty -> .)
    WHILE           reduce using rule 75 (empty -> .)
    FOR             reduce using rule 75 (empty -> .)
    LBRACES         reduce using rule 75 (empty -> .)
    INT             reduce using rule 75 (empty -> .)
    FLOAT           reduce using rule 75 (empty -> .)
    CHAR            reduce using rule 75 (empty -> .)
    DOUBLE          reduce using rule 75 (empty -> .)

    lista_comandos                 shift and go to state 15
    empty                          shift and go to state 16

state 15

    (5) bloco -> LBRACES lista_comandos . RBRACES
    (6) lista_comandos -> lista_comandos . comando
    (8) comando -> . declaracao SEMICOLON
    (9) comando -> . atribuicao SEMICOLON
    (10) comando -> . incremento SEMICOLON
    (11) comando -> . chamada_funcao SEMICOLON
    (12) comando -> . retorno SEMICOLON
    (13) comando -> . comando_condicional
    (14) comando -> . comando_repeticao
    (15) comando -> . bloco
    (16) declaracao -> . tipo lista_declaradores
    (25) atribuicao -> . ID EQUALS expressao
    (26) incremento -> . ID INCREMENT
    (27) incremento -> . ID DECREMENT
    (68) chamada_funcao -> . ID LPAREN argumentos_opcionais RPAREN
    (28) retorno -> . RETURN expressao_opcional
    (29) comando_condicional -> . IF LPAREN condicao RPAREN comando
    (30) comando_condicional -> . IF LPAREN condicao RPAREN comando ELSE comando
    (31) comando_repeticao -> . WHILE LPAREN condicao RPAREN comando
    (32) comando_repeticao -> . FOR LPAREN inicio_for SEMICOLON condicao_opcional SEMICOLON atualizacao_for RPAREN comando
    (5) bloco -> . LBRACES lista_comandos RBRACES
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . CHAR
    (20) tipo -> . DOUBLE

    RBRACES         shift and go to state 17
    ID              shift and go to state 28
    RETURN          shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    LBRACES         shift and go to state 14
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    CHAR            shift and go to state 35
    DOUBLE          shift and go to state 36

    comando                        shift and go to state 18
    declaracao                     shift and go to state 19
    atribuicao                     shift and go to state 20
    incremento                     shift and go to state 21
    chamada_funcao                 shift and go to state 22
    retorno                        shift and go to state 23
    comando_condicional            shift and go to state 24
    comando_repeticao              shift and go to state 25
    bloco                          shift and go to state 26
    tipo                           shift and go to state 27

state 16

    (7) lista_comandos -> empty .

    RBRACES         reduce using rule 7 (lista_comandos -> empty .)
    ID              reduce using rule 7 (lista_comandos -> empty .)
    RETURN          reduce using rule 7 (lista_comandos -> empty .)
    IF              reduce using rule 7 (lista_comandos -> empty .)
    WHILE           reduce using rule 7 (lista_comandos -> empty .)
    FOR             reduce using rule 7 (lista_comandos -> empty .)
    LBRACES         reduce using rule 7 (lista_comandos -> empty .)
    INT             reduce using rule 7 (lista_comandos -> empty .)
    FLOAT           reduce using rule 7 (lista_comandos -> empty .)
    CHAR            reduce using rule 7 (lista_comandos -> empty .)
    DOUBLE          reduce using rule 7 (lista_comandos -> empty .)


state 17

    (5) bloco -> LBRACES lista_comandos RBRACES .

    SEMICOLON       reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    $end            reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    RBRACES         reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    ID              reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    RETURN          reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    IF              reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    WHILE           reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    FOR             reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    LBRACES         reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    INT             reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    FLOAT           reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    CHAR            reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    DOUBLE          reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)
    ELSE            reduce using rule 5 (bloco -> LBRACES lista_comandos RBRACES .)


state 18

    (6) lista_comandos -> lista_comandos comando .

    RBRACES         reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    ID              reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    RETURN          reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    IF              reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    WHILE           reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    FOR             reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    LBRACES         reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    INT             reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    FLOAT           reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    CHAR            reduce using rule 6 (lista_comandos -> lista_comandos comando .)
    DOUBLE          reduce using rule 6 (lista_comandos -> lista_comandos comando .)


state 19

    (8) comando -> declaracao . SEMICOLON

    SEMICOLON       shift and go to state 37


state 20

    (9) comando -> atribuicao . SEMICOLON

    SEMICOLON       shift and go to state 38


state 21

    (10) comando -> incremento . SEMICOLON

    SEMICOLON       shift and go to state 39


state 22

    (11) comando -> chamada_funcao . SEMICOLON

    SEMICOLON       shift and go to state 40


state 23

    (12) comando -> retorno . SEMICOLON

    SEMICOLON       shift and go to state 41


state 24

    (13) comando -> comando_condicional .

    RBRACES         reduce using rule 13 (comando -> comando_condicional .)
    ID              reduce using rule 13 (comando -> comando_condicional .)
    RETURN          reduce using rule 13 (comando -> comando_condicional .)
    IF              reduce using rule 13 (comando -> comando_condicional .)
    WHILE           reduce using rule 13 (comando -> comando_condicional .)
    FOR             reduce using rule 13 (comando -> comando_condicional .)
    LBRACES         reduce using rule 13 (comando -> comando_condicional .)
    INT             reduce using rule 13 (comando -> comando_condicional .)
    FLOAT           reduce using rule 13 (comando -> comando_condicional .)
    CHAR            reduce using rule 13 (comando -> comando_condicional .)
    DOUBLE          reduce using rule 13 (comando -> comando_condicional .)
    ELSE            reduce using rule 13 (comando -> comando_condicional .)


state 25

    (14) comando -> comando_repeticao .

    RBRACES         reduce using rule 14 (comando -> comando_repeticao .)
    ID              reduce using rule 14 (comando -> comando_repeticao .)
    RETURN          reduce using rule 14 (comando -> comando_repeticao .)
    IF              reduce using rule 14 (comando -> comando_repeticao .)
    WHILE           reduce using rule 14 (comando -> comando_repeticao .)
    FOR             reduce using rule 14 (comando -> comando_repeticao .)
    LBRACES         reduce using rule 14 (comando -> comando_repeticao .)
    INT             reduce using rule 14 (comando -> comando_repeticao .)
    FLOAT           reduce using rule 14 (comando -> comando_repeticao .)
    CHAR            reduce using rule 14 (comando -> comando_repeticao .)
    DOUBLE          reduce using rule 14 (comando -> comando_repeticao .)
    ELSE            reduce using rule 14 (comando -> comando_repeticao .)


state 26

    (15) comando -> bloco .

    RBRACES         reduce using rule 15 (comando -> bloco .)
    ID              reduce using rule 15 (comando -> bloco .)
    RETURN          reduce using rule 15 (comando -> bloco .)
    IF              reduce using rule 15 (comando -> bloco .)
    WHILE           reduce using rule 15 (comando -> bloco .)
    FOR             reduce using rule 15 (comando -> bloco .)
    LBRACES         reduce using rule 15 (comando -> bloco .)
    INT             reduce using rule 15 (comando -> bloco .)
    FLOAT           reduce using rule 15 (comando -> bloco .)
    CHAR            reduce using rule 15 (comando -> bloco .)
    DOUBLE          reduce using rule 15 (comando -> bloco .)
    ELSE            reduce using rule 15 (comando -> bloco .)


state 27

    (16) declaracao -> tipo . lista_declaradores
    (21) lista_declaradores -> . lista_declaradores COMMA declarador
    (22) lista_declaradores -> . declarador
    (23) declarador -> . ID
    (24) declarador -> . ID EQUALS expressao

    ID              shift and go to state 44

    lista_declaradores             shift and go to state 42
    declarador                     shift and go to state 43

state 28

    (25) atribuicao -> ID . EQUALS expressao
    (26) incremento -> ID . INCREMENT
    (27) incremento -> ID . DECREMENT
    (68) chamada_funcao -> ID . LPAREN argumentos_opcionais RPAREN

    EQUALS          shift and go to state 45
    INCREMENT       shift and go to state 46
    DECREMENT       shift and go to state 47
    LPAREN          shift and go to state 48


state 29

    (28) retorno -> RETURN . expressao_opcional
    (50) expressao_opcional -> . expressao
    (51) expressao_opcional -> . empty
    (52) expressao -> . expressao PLUS termo
    (53) expressao -> . expressao MINUS termo
    (54) expressao -> . termo
    (75) empty -> .
    (55) termo -> . termo TIMES potencia
    (56) termo -> . termo DIVIDE potencia
    (57) termo -> . potencia
    (58) potencia -> . fator POWER potencia
    (59) potencia -> . fator
    (60) fator -> . INTEGER
    (61) fator -> . FLOAT_N
    (62) fator -> . STRING
    (63) fator -> . CHARACTER
    (64) fator -> . ID
    (65) fator -> . chamada_funcao
    (66) fator -> . LPAREN expressao RPAREN
    (67) fator -> . MINUS fator
    (68) chamada_funcao -> . ID LPAREN argumentos_opcionais RPAREN

    SEMICOLON       reduce using rule 75 (empty -> .)
    INTEGER         shift and go to state 56
    FLOAT_N         shift and go to state 57
    STRING          shift and go to state 58
    CHARACTER       shift and go to state 59
    ID              shift and go to state 60
    LPAREN          shift and go to state 62
    MINUS           shift and go to state 53

    expressao_opcional             shift and go to state 49
    expressao                      shift and go to state 50
    empty                          shift and go to state 51
    termo                          shift and go to state 52
    potencia                       shift and go to state 54
    fator                          shift and go to state 55
    chamada_funcao                 shift and go to state 61

state 30

    (29) comando_condicional -> IF . LPAREN condicao RPAREN comando
    (30) comando_condicional -> IF . LPAREN condicao RPAREN comando ELSE comando

    LPAREN          shift and go to state 63


state 31

    (31) comando_repeticao -> WHILE . LPAREN condicao RPAREN comando

    LPAREN          shift and go to state 64


state 32

    (32) comando_repeticao -> FOR . LPAREN inicio_for SEMICOLON condicao_opcional SEMICOLON atualizacao_for RPAREN comando

    LPAREN          shift and go to state 65


state 33

    (17) tipo -> INT .

    ID              reduce using rule 17 (tipo -> INT .)


state 34

    (18) tipo -> FLOAT .

    ID              reduce using rule 18 (tipo -> FLOAT .)


state 35

    (19) tipo -> CHAR .

    ID              reduce using rule 19 (tipo -> CHAR .)


state 36

    (20) tipo -> DOUBLE .

    ID              reduce using rule 20 (tipo -> DOUBLE .)


state 37

    (8) comando -> declaracao SEMICOLON .

    RBRACES         reduce using rule 8 (comando -> declaracao SEMICOLON .)
    ID              reduce using rule 8 (comando -> declaracao SEMICOLON .)
    RETURN          reduce using rule 8 (comando -> declaracao SEMICOLON .)
    IF              reduce using rule 8 (comando -> declaracao SEMICOLON .)
    WHILE           reduce using rule 8 (comando -> declaracao SEMICOLON .)
    FOR             reduce using rule 8 (comando -> declaracao SEMICOLON .)
    LBRACES         reduce using rule 8 (comando -> declaracao SEMICOLON .)
    INT             reduce using rule 8 (comando -> declaracao SEMICOLON .)
    FLOAT           reduce using rule 8 (comando -> declaracao SEMICOLON .)
    CHAR            reduce using rule 8 (comando -> declaracao SEMICOLON .)
    DOUBLE          reduce using rule 8 (comando -> declaracao SEMICOLON .)
    ELSE            reduce using rule 8 (comando -> declaracao SEMICOLON .)


state 38

    (9) comando -> atribuicao SEMICOLON .

    RBRACES         reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    ID              reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    RETURN          reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    IF              reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    WHILE           reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    FOR             reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    LBRACES         reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    INT             reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    FLOAT           reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    CHAR            reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    DOUBLE          reduce using rule 9 (comando -> atribuicao SEMICOLON .)
    ELSE            reduce using rule 9 (comando -> atribuicao SEMICOLON .)


state 39

    (10) comando -> incremento SEMICOLON .

    RBRACES         reduce using rule 10 (comando -> incremento SEMICOLON .)
    ID              reduce using rule 10 (comando -> incremento SEMICOLON .)
    RETURN          reduce using rule 10 (comando -> incremento SEMICOLON .)
    IF              reduce using rule 10 (comando -> incremento SEMICOLON .)
    WHILE           reduce using rule 10 (comando -> incremento SEMICOLON .)
    FOR             reduce using rule 10 (comando -> incremento SEMICOLON .)
    LBRACES         reduce using rule 10 (comando -> incremento SEMICOLON .)
    INT             reduce using rule 10 (comando -> incremento SEMICOLON .)
    FLOAT           reduce using rule 10 (comando -> incremento SEMICOLON .)
    CHAR            reduce using rule 10 (comando -> incremento SEMICOLON .)
    DOUBLE          reduce using rule 10 (comando -> incremento SEMICOLON .)
    ELSE            reduce using rule 10 (comando -> incremento SEMICOLON .)


state 40

    (11) comando -> chamada_funcao SEMICOLON .
